Finish implementing layout functions for remaining field types and fix vertical alignment of components with rows.

--- a/webui/common/layout.css
+++ b/webui/common/layout.css
@@ -11,6 +11,10 @@
 	/* inline-block is needed so the container will be aligned
 	   horizontally in the same row of the form/dashboard layout */
 	display: inline-block;
+	
+	/* By default all layoutContainer's are aligned to the top
+	  of the row they are contained within */
+	vertical-align:top;
 }
 
 
